# data-collector

./: .gitignore  LICENSE  README.md  pyproject.toml
data_collector/: AAPL.json  ETH.json  config.py  financial_apis.py  main.py  models.py  raw-fetch.py  utils.py
