[tool.poetry]
name = "data-collector"
version = "0.1.0"
description = ""
authors = ["Akash Mishra <akash.mishra13@gmail.com>"]
readme = "README.md"
packages = [{include = "data_collector"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.0"
blueprint = "^3.4.2"
asyncio = "^3.4.3"
aiohttp = "^3.8.4"
orjson = "^3.8.10"
pandas = "^2.0.0"
dask = "^2023.4.0"
ratelimit = "^2.2.1"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
